deployment/sparqlendpoint-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sparqlendpoint
spec:
  selector:
    app: sparqlendpoint
  ports:
    - name: sparqlendpoint
      port: 3030
