deployment/ingress.yaml
#TODO - Is this file necessary?
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: siemens-wot.demo.logilab.fr
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
spec:
  tls:
    - hosts:
        - siemens-wot.demo.logilab.fr
        - siemens-fuseki.demo.logilab.fr
  rules:
    - host: siemens-wot.demo.logilab.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 5000
    - host: siemens-fuseki.demo.logilab.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: sparqlendpoint
              servicePort: 3030
